# Graphfun

./: .backlog  .backlog.md  CMakeLists.txt  README.md  benchmark.sh  conanfile.txt  rebuild.sh
.github/workflows/: build_std.yml
rld/algos/: graph.h
